--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>予約フォーム</title>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <style>
-        /* 右端の細いナビ */
+        /* 右端の細いナビ（固定） */
         .side-nav {
-            position: absolute; /* スクロール追従のため absolute */
-            right: 5px; /* ほぼ右端 */
-            top: 100px; /* 初期位置 */
+            position: fixed; /* 画面スクロールしても固定 */
+            right: -5px; /* さらに右へ */
+            top: 100px;
             background: #1e1e2d;
             display: flex;
             flex-direction: column;
@@ -18,8 +18,8 @@
             padding: 5px;
             border-radius: 10px 0 0 10px;
             z-index: 1000;
-            transition: top 0.2s ease-out;
             width: 35px; /* さらに細く */
+            transform: translateX(20px); /* 強制的に右にずらす */
         }
 
         .side-nav a {
@@ -29,19 +29,18 @@
             justify-content: center;
             color: white;
             text-decoration: none;
-            font-size: 14px;
-            margin: 10px 0;
-            padding: 8px;
+            font-size: 10px;
+            margin: 5px 0;
+            padding: 5px;
             transition: background 0.3s, transform 0.2s;
-            border-radius: 8px;
-            width: 50px;
-            height: 50px;
+            border-radius: 5px;
+            width: 30px;
+            height: 30px;
             text-align: center;
         }
 
         .side-nav a i {
-            font-size: 18px;
-            margin-bottom: 3px;
+            font-size: 14px; /* さらに小さく */
         }
 
         .side-nav a:hover {
@@ -49,17 +48,27 @@
             transform: scale(1.1);
         }
 
-        v
+        /* スマホ用の微調整 */
+        @media (max-width: 600px) {
+            .side-nav {
+                right: 2px; /* スマホではさらに右端に */
+                width: 30px; /* もっと細く */
+            }
+
+            .side-nav a {
+                width: 28px;
+                height: 28px;
+            }
+
+            .side-nav a i {
+                font-size: 12px; /* スマホではもっと小さく */
+            }
+        }
 
         /* フォーム全体 */
         .container {
             max-width: 600px;
             margin: 50px auto;
-            padding: 20px;
-        }
-
-        /* セクションのスタイル */
-        .section {
             padding: 20px;
         }
 
@@ -563,20 +572,22 @@
         }
 
         .edit-button {
-            background-color: #ff6b6b;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            padding: 5px 10px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-            white-space: nowrap;
-            /* 改行を防ぐ */
-        }
+    background-color: #ff6b6b;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 5px 10px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    white-space: nowrap; /* 改行を防ぐ */
+    width: 80px; /* 横幅を固定 */
+    text-align: center; /* テキストを中央揃え */
+}
 
-        .edit-button:hover {
-            background-color: #ff4f4f;
-        }
+.edit-button:hover {
+    background-color: #ff4f4f;
+}
+
 
         /* 100点の予約フォームCSS */
 
