--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
             position: fixed; /* 画面スクロールしても固定 */
             right: -5px; /* さらに右へ */
             top: 100px;
-            background: #1e1e2d;
+            background: #13ca5e;
             display: flex;
             flex-direction: column;
             align-items: center;
-            padding: 5px;
+            padding: 6px;
             border-radius: 10px 0 0 10px;
             z-index: 1000;
             width: 35px; /* さらに細く */
@@ -40,7 +40,14 @@
         }
 
         .side-nav a i {
-            font-size: 14px; /* さらに小さく */
+            font-size: 20px; /* さらに大きく */
+        }
+
+        .side-nav a span {
+            font-size: 24px; /* 矢印をさらに大きく */
+            position: absolute;
+            left: -0px; /* 左端に寄せる */
+            top: 13px; /* さらに下へ */
         }
 
         .side-nav a:hover {
@@ -105,8 +112,6 @@
             margin: 0;
             padding-top: 5px;
             overflow-x: hidden;
-            transform: translateX(-20px);
-            /* 右にずらす */
         }
 
         .container {
@@ -724,30 +729,28 @@
 <body>
     <!-- 右側の追従ナビ -->
     <div class="side-nav" id="sideNav">
-        <a href="#section-name"><i class="fas fa-user"></i></a>
-        <a href="#section-phone"><i class="fas fa-phone"></i></a>
-        <a href="#section-visit"><i class="fas fa-store"></i></a>
-        <a href="#section-menu"><i class="fas fa-utensils"></i></a>
-        <a href="#section-date"><i class="fas fa-calendar-alt"></i></a>
-        <a href="#section-message"><i class="fas fa-comment"></i></a>
+        <a href="#section-message">
+            <span>⇩</span>
+            <i class="fas fa-comment"></i>
+        </a>
     </div>
 
     <div class="container">
         <h1>予約フォームA<br>予約フォーム
         </h1>
-        <div class="label" div id="section-name">お客様名<span class="required">必須</span></div>
+        <div class="label">お客様名<span class="required">必須</span></div>
         <input type="text" id="name" placeholder="お名前を入力してください" oninput="saveInput('name')">
 
-        <div class="label" div id="section-phone">電話番号<span class="required">必須</span></div>
+        <div class="label">電話番号<span class="required">必須</span></div>
         <input type="tel" id="phone" placeholder="電話番号を入力してください" oninput="saveInput('phone')">
 
-        <div class="label"div id="section-visit">ご来店回数<span class="required">必須</span></div>
+        <div class="label">ご来店回数<span class="required">必須</span></div>
         <div class="visit-buttons">
             <button type="button" id="firstVisit" onclick="selectVisit(this)">1回目〈30分〉</button>
             <button type="button" id="repeatVisit" onclick="selectVisit(this)">2回目以降〈0分〉</button>
         </div>
 
-        <div class="label" id="course" div id="section-menu">メニューをお選びください<span class="required">必須</span></div>
+        <div class="label" id="course">メニューをお選びください<span class="required">必須</span></div>
         <div class="info-text">※メニューを選択すると<br>空き状況のカレンダーが表示されます</div>
         <div class="menu-sections">
             <button type="button" onclick="showMenu('male')">ブライダルコース</button>
@@ -851,7 +854,7 @@
             </div>
         </div>
 
-        <div class="label" div id="section-date">希望日時<span class="required">必須</span></div>
+        <div class="label">希望日時<span class="required">必須</span></div>
         <div class="calendar-container">
             <!-- 月を独立して配置 -->
             <div class="current-month-container">
@@ -894,13 +897,13 @@
             </div>
         </div>
 
-        <div class="labelContent" div id="section-message">メッセージ<br>（質問等お気軽にご記入ください）</div>
+        <div class="labelContent">メッセージ<br>（質問等お気軽にご記入ください）</div>
         <textarea id="message" rows="4" placeholder="メッセージを入力してください"></textarea>
 
         <div class="labelContent">ご予約内容</div>
         <div id="displayInfo"></div> <!-- ここに選択された情報を表示します -->
 
-        <button class="submit-button" onclick="submitForm()">予約を行う</button>
+        <button class="submit-button" onclick="submitForm()" div id="section-message">予約を行う</button>
     </div>
 
     <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
