--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         }
 
         .side-nav a:hover {
-            background: #357ac4;
+            background: #13ca5e;
             transform: scale(1.1);
         }
 
@@ -89,7 +89,7 @@
 
         /* 予約ボタン */
         .submit-button {
-            background: #4a90e2;
+            background: #13ca5e;
             color: white;
             border: none;
             border-radius: 5px;
@@ -99,7 +99,7 @@
         }
 
         .submit-button:hover {
-            background: #357ac4;
+            background: #13ca5e;
         }
         
         body {
@@ -1001,7 +1001,7 @@
         window.addEventListener('scroll', function () {
             let sideNav = document.getElementById('sideNav');
             let scrollY = window.scrollY || document.documentElement.scrollTop;
-            sideNav.style.top = (scrollY + 100) + "px"; // スクロール量に合わせて移動
+            sideNav.style.top = (scrollY + 50) + "px"; // スクロール量に合わせて移動
         });
 
         function updateDisplayInfo() {
