--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
         .side-nav {
             position: fixed; /* 画面スクロールしても固定 */
             right: -5px; /* さらに右へ */
-            top: 100px;
+            top: 80%; /* 画面中央に固定 */
+            transform: translateY(-50%) translateX(20px); /* 中央配置と右ずらし */
             background: #13ca5e;
             display: flex;
             flex-direction: column;
             align-items: center;
-            padding: 6px;
+            padding: 4px;
             border-radius: 10px 0 0 10px;
             z-index: 1000;
             width: 35px; /* さらに細く */
-            transform: translateX(20px); /* 強制的に右にずらす */
         }
 
         .side-nav a {
@@ -997,12 +997,6 @@
             });
         });
 
-        // スクロール追従処理
-        window.addEventListener('scroll', function () {
-            let sideNav = document.getElementById('sideNav');
-            let scrollY = window.scrollY || document.documentElement.scrollTop;
-            sideNav.style.top = (scrollY + 50) + "px"; // スクロール量に合わせて移動
-        });
 
         function updateDisplayInfo() {
             const name = document.getElementById('name').value;
