--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
             width: 35px; /* さらに細く */
         }
 
+        .side-nav a:active {
+            transform: scale(1.0); /* タップした後に元のサイズに戻す */
+        }
+
         .side-nav a {
             display: flex;
             flex-direction: column;
