--- a/index.html
+++ b/index.html
@@ -493,10 +493,10 @@
         <h1>Lumiere<br>予約フォーム
         </h1>
         <div class="label">お客様名</div>
-        <input type="text" id="name" placeholder="お名前を入力してください">
+        <input type="text" id="name" placeholder="お名前を入力してください" oninput="saveInput('name')">
 
         <div class="label">電話番号</div>
-        <input type="tel" id="phone" placeholder="電話番号を入力してください">
+        <input type="tel" id="phone" placeholder="電話番号を入力してください" oninput="saveInput('phone')">
 
         <div class="label">ご来店回数</div>
         <div class="visit-buttons">
@@ -632,7 +632,7 @@
 
         document.addEventListener('DOMContentLoaded', function () {
             liff.init({
-                liffId: '2005254357-zKma9BZk'
+                liffId: '2006896977-1oJmD3Xx'
             }).then(() => {
                 console.log('LIFF初期化成功');
             }).catch((err) => {
@@ -673,6 +673,21 @@
 
 
         let selectedMenuTime = 0;
+
+                // 入力内容をローカルストレージに保存
+                function saveInput(id) {
+            const value = document.getElementById(id).value;
+            localStorage.setItem(id, value);
+        }
+
+        // ページが読み込まれたときに前回の入力内容を復元
+        document.addEventListener('DOMContentLoaded', function () {
+            const savedName = localStorage.getItem('name');
+            const savedPhone = localStorage.getItem('phone');
+
+            if (savedName) document.getElementById('name').value = savedName;
+            if (savedPhone) document.getElementById('phone').value = savedPhone;
+        });
 
         function updateDisplayInfo() {
             const name = document.getElementById('name').value;
